--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <title>Portofolio</title>
 </head>
+
 <body>
-    <header id="header" class="container box-shadow" >
-        <div class="wrapper-navbar">
+    <header id="header" class="container box-shadow">
+        <div class="wrapper-navbar  background-1">
             <div class="container">
-                <h4>RIZAL</h4>
+                <h4>R</h4>
             </div>
             <div class="navbar">
                 <ul class="container">
                     <li class="li-navbar"><a href="index.html">About Me</a></li>
-                    <li class="li-navbar"><a href="project.html">My Project</a></li>
-                    <li class="li-navbar"><a href="achievment.html">My Achievement</a></li>
-                    <li class="li-navbar"><a href="contact.html">Contact Me</a></li>
+                    <li class="li-navbar"><a href="project.html">Portofolio</a></li>
+                    <li class="li-navbar"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
     <section id="container1" class="container">
-        <div class="container1 col-center flex-row">
+        <div class="container1 col-center flex-row  background-1">
             <div class="heading-container1">
                 <h1 class="f-4em text-center">MUHAMMAD RIZAL</h1>
                 <h1 class="f-3em text-center">WEB DEVELOPMENT</h1>
@@ -35,12 +36,24 @@
     </section>
 
     <section id="container2" class="container mt-50">
-        <div class="wrapper flex-column gap">
+        <div class="wrapper flex-column gap  background-1">
             <h1 class="f-2em">About Me</h1>
             <div class="wrapper gap">
-                <p class="text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, eos? Corrupti quis iste dolorem architecto quidem amet eum quasi quo aut beatae unde illum qui aliquid doloremque illo similique, in aliquam, obcaecati ipsam quibusdam ipsum consectetur earum nisi? Perspiciatis, libero! Alias error sunt odit magni quas ut dolor, atque placeat commodi? Aspernatur error assumenda ipsa molestiae modi odit minus dolor totam rerum, minima sit quod quis saepe sunt vel facilis et corrupti, qui voluptate natus repellat suscipit dicta dolore. Ipsa repudiandae dolore minima rerum accusamus beatae ea, repellendus odio ad in ex pariatur mollitia eum perferendis eius. Blanditiis sequi, asperiores saepe molestias excepturi vel quis labore totam distinctio quia praesentium aliquid pariatur sed nesciunt aspernatur at ipsam atque nihil incidunt deleniti! Id sapiente, maxime, odit dolor ullam, expedita blanditiis harum fuga magni inventore quia? Dicta commodi perspiciatis in suscipit aspernatur ipsam architecto facere laborum a officia qui vero fugiat repellendus, eius maxime mollitia, autem modi impedit. Non modi distinctio omnis placeat? Vero nobis suscipit nam voluptatum voluptatibus mollitia excepturi necessitatibus iusto odit iste aliquid, corporis omnis libero alias voluptas unde possimus iure architecto doloribus debitis ipsum pariatur non laudantium soluta! Quo perferendis, ex eum beatae quis doloremque animi cupiditate provident.</p>
+                <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam quia iste
+                    repellendus modi optio autem consequatur perspiciatis aut laudantium! Molestiae consequuntur fugiat
+                    optio ducimus laborum odit commodi error, libero, odio, aspernatur cupiditate quo. Cumque voluptatem
+                    porro corrupti amet cupiditate ducimus molestias unde voluptas omnis ea? Repudiandae eos corrupti
+                    explicabo ea possimus ipsam. Eius sunt reprehenderit tempore illum! Incidunt aliquam impedit
+                    explicabo ratione minus odio? Magnam consequuntur blanditiis quam voluptatem necessitatibus qui
+                    cumque maxime, obcaecati</p>
 
-                <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam quia iste repellendus modi optio autem consequatur perspiciatis aut laudantium! Molestiae consequuntur fugiat optio ducimus laborum odit commodi error, libero, odio, aspernatur cupiditate quo. Cumque voluptatem porro corrupti amet cupiditate ducimus molestias unde voluptas omnis ea? Repudiandae eos corrupti explicabo ea possimus ipsam. Eius sunt reprehenderit tempore illum! Incidunt aliquam impedit explicabo ratione minus odio? Magnam consequuntur blanditiis quam voluptatem necessitatibus qui cumque maxime, obcaecati, nam, dicta illum minus explicabo ducimus. Molestiae, eveniet sed, alias sit voluptate error ratione veniam dignissimos illum voluptatibus est? Provident ab ea velit quidem aperiam quod a necessitatibus perferendis, beatae recusandae odit reiciendis officiis suscipit, iure assumenda eveniet, repudiandae aliquam amet neque inventore adipisci porro ducimus. Neque id nihil, maiores similique culpa repellat vero, recusandae, quo libero ad sint? Libero, repudiandae quaerat deserunt omnis non adipisci sit hic, incidunt delectus eveniet ad! Perferendis mollitia exercitationem at dolor, inventore facilis repellendus obcaecati aperiam tenetur amet sapiente! Obcaecati reprehenderit enim amet magni eveniet velit. Beatae doloremque cum sed veritatis fugit tempora corrupti modi dolorum odit vitae perferendis ducimus explicabo voluptatem animi eligendi repellendus, architecto veniam laudantium, est, sunt iusto? Aspernatur est aliquid at natus ut qui perferendis facere?</p>
+                <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam quia iste
+                    repellendus modi optio autem consequatur perspiciatis aut laudantium! Molestiae consequuntur fugiat
+                    optio ducimus laborum odit commodi error, libero, odio, aspernatur cupiditate quo. Cumque voluptatem
+                    porro corrupti amet cupiditate ducimus molestias unde voluptas omnis ea? Repudiandae eos corrupti
+                    explicabo ea possimus ipsam. Eius sunt reprehenderit tempore illum! Incidunt aliquam impedit
+                    explicabo ratione minus odio? Magnam consequuntur blanditiis quam voluptatem necessitatibus qui
+                    cumque maxime, obcaecati</p>
             </div>
 
         </div>
@@ -48,17 +61,40 @@
     </section>
 
     <section id="container2" class="container mt-50">
-        <div class="wrapper col-center flex-column gap">
+        <div class="wrapper col-center flex-column gap  background-1">
             <h1 class="f-2em">Education</h1>
-            <div class="thumbnail col gap">
-                <img class="img-thumbnail" src="Asset/hero4.jpg" alt="">
+
+            <div class="card2 col flex-row gap-10">
                 <div class="">
-                    <h1 class="f-1em text-center text-primary" >SMK MULTIMEDIA NUSANTARA</h1>
-                    <h1 class="f-1em text-center text-primary">TEKNIK KOMPUTER DAN JARINGAN</h1>
-                    <h1 class="f-1em text-center text-primary mb-10">Tahun 2019</h1>
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aliquid est architecto iure facere. Ut deserunt dolore maxime quae nam quia possimus officiis odio, eaque non ratione dolorem saepe reprehenderit exercitationem officia iusto asperiores nesciunt consectetur delectus libero quidem, fugiat suscipit rerum. Molestiae accusamus minus voluptatibus labore sapiente vero repellat?</p>
+                    <h5>2019</h5>
+                </div>
+                <div class="">
+                    <h5 class="text-center">Teknik Komputer dan Jaringan</h5>
+                    <h5 class="text-center">SMK Multimedia Nusantara · DKI Jakarta, Indonesia</h5>
+                    <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ex, consequuntur modi adipisci a</p>
                 </div>
             </div>
+
+
+
+
+
+            <!-- <div class="col flex-row gap-2em">
+                <div class="col flex-column gap">
+                    <img class="img-thumbnail" src="Asset/hero4.jpg" alt="">
+                    <div class="col flex-column">
+                        <h1 class="f-1em text-center text-primary">SMK MULTIMEDIA NUSANTARA</h1>
+                        <h1 class="f-1em text-center text-primary">Teknik Komputer dan Jaringan</h1>
+                    </div>
+                </div>
+                <div class="col flex-column gap">
+                    <img class="img-thumbnail" src="Asset/hero4.jpg" alt="">
+                    <div class="col flex-column">
+                        <h1 class="f-1em text-center text-primary">SMK MULTIMEDIA NUSANTARA</h1>
+                        <h1 class="f-1em text-center text-primary">Teknik Komputer dan Jaringan</h1>
+                    </div>
+                </div>
+            </div> -->
 
             <!-- <a href="#">
                 <div class="card1 col flex-column gap">
@@ -72,4 +108,5 @@
             </a> -->
     </section>
 </body>
+
 </html>
